<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <RelativeLayout
            android:padding="5dp"
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/mainLayout"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/nunito"
                    android:singleLine="true"
                    android:text="@string/login_greet"
                    android:textSize="@dimen/textExtraLarge"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/nunito"
                    android:singleLine="true"
                    android:text="@string/login_subgreet"
                    android:textSize="@dimen/textMedium"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">


            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:text="@string/login_username"
                    android:textSize="@dimen/textSmall" />

                <EditText
                    android:layout_marginTop="5dp"
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_rounded"
                    android:ems="10"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/login_usernamehint"
                    android:inputType="textVisiblePassword"
                    android:padding="15dp"
                    android:textSize="@dimen/textMedium">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:text="@string/login_password"
                    android:textSize="@dimen/textSmall" />

                <EditText
                    android:layout_marginTop="5dp"
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_rounded"
                    android:ems="10"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/login_passwordhint"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textSize="@dimen/textMedium" />
            </LinearLayout>



                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:text="@string/login_forgot"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/textMedium" />

                <android.support.v7.widget.CardView
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:cardElevation="3dp"
                    app:cardCornerRadius="@dimen/rounded_button">
                    <TextView
                        android:background="@drawable/button_rounded"
                        android:padding="15dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/nunito"
                        android:text="@string/login_button"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/textMedium"
                        android:textAllCaps="false"
                        android:textStyle="bold"/>
                </android.support.v7.widget.CardView>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/footerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainLayout"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/login_register"
                    android:textSize="@dimen/textMedium"
                    android:fontFamily="@font/nunito"/>
                <TextView
                    android:layout_marginLeft="5dp"
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/login_subregister"
                    android:textSize="@dimen/textMedium"
                    android:fontFamily="@font/nunito"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>